# lake

./: .dockerignore  .editorconfig  .env.develop  .gitignore  AXIOM_QUICKSTART.md  AXIOM_README.md  AXIOM_SETUP.md  BACKUP_README.md  ENDPOINT_LOGGING_GUIDE.md  FIX_SAMPLING.md  IMPLEMENTATION_SUMMARY.md  LOGGING_SUMMARY.md  README.md  TROUBLESHOOTING_AXIOM.md  WHATSAPP_INTEGRATION.md  WIDE_EVENT_EXAMPLE.md  backup.env  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  generate_fake_data.py  package-lock.json  package.json
backend/: .gitignore  CHATBOT_README.md  backend.dockerfile  gunicorn_conf.py  pyproject.toml  start-reload.sh
backend/app/: README_TOTALS.md  pyproject.toml  simple_axiom_test.py  synonyms.py  test_axiom_connection.py  test_real_requests.py  utils.py
backend/app/alembic/versions/: 0430ce195cdb_add_country_and_change_name.py  0be6c139413c_add_created_at_and_updated_at_to_user_.py  0e747f730710_fix_add_account_id_to_expense.py  14cb7994c598_remove_title_from_expense_and_add_.py  18fdd60ecac9_add_owner_to_item.py  1b088076d25c_adjust_balance_table.py  1bf44fed8e19_add_date_automatically_to_import.py  1ebe11ed4e0a_fix_add_account_to_expense.py  20250905_add_performance_indexes.py  210562bb3adc_add_category_and_subcategory_tables.py  26509aaa0bab_remove_goal_id_from_income_table.py  2ea7846f0c99_default_wa_account.py  37e5650bd60b_add_account_model.py  39b6ea580369_add_balance_to_user_account.py  4410f9cfa10e_add_type_to_accounts.py  447480971bb5_add_income_table.py  469548e06c7f_add_total_to_category_and_sub.py  5d8f1d524127_add_subcategory_to_expense_and_income.py  60ad6f7febfb_add_is_income_to_cateogry_db.py  698be9656afe_add_is_default_to_category_and_sub_.py  70a29aa8066_add_goal_table_with_icon.py  71779bc66bff_fix_expense_date_type.py  761f9a4bf01f_add_transfer_table.py  797723a815e1_add_made_from_to_expenses_and_incomes.py  79a471c520ff_add_places_to_imports.py  7b37b77a916d_add_feedback_table.py  8844eb40d730_rename_title_for_name_on_place_table.py  89973384bde3_fix_subcategory_relationship.py  8ba3134568e9_fix_wrong_mapped_account_expenses.py  9c38a2c792d4_dont_return_items_on_get_user.py  9ff2e4ef8486_add_colors_to_accounts.py  a2f6941377ef_add_phone_to_user.py  a740c6e08748_add_feedback_table_again_lol_damn.py  a83c8e89f9eb_add_column_uuid_to_user_model.py  a8a96707857e_add_feedback_table_again_lol.py  ab765e1b5807_make_name_and_hashed_password_nullable.py  abaaf5a51f93_fix_account_model.py  acdfd62f770e_fix_transfer_relationships.py  add_goal_id_back_to_income_table.py  add_goal_table.py  (+20 more)
backend/app/api/api_v1/: api.py
backend/app/app/: categories_and_sub.py  initial_data.py  main.py  synonyms.py  tests_pre_start.py  update_totals.py  utils.py
backend/app/app/ai/: __init__.py  financial_agent.py  financial_agent_router.py  financial_analytics.py  mine.py  ocr.py  prompt.py  transaction_parser.py  whatsapp_parser.py
backend/app/app/api/: deps.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_account.py  crud_balance_adjustment.py  (+12 more)
backend/app/core/: config.py
backend/app/crud/: crud_income.py  crud_subcategory.py
backend/app/db/: init_totals.py  session.py
backend/app/models/: __init__.py  category.py  expense.py  imports.py  subcategory.py  user.py
backend/app/process_data/: utils.py
backend/app/schemas/: feedback.py
backend/app/scripts/: prestart.sh
backend/app/seed/: incomes.json  seeder.py
backend/app/tests/: conftest.py
backend/data-process/: accounts.ipynb  category_chart.ipynb  clean.ipynb  clean_two.ipynb  csv.ipynb  get_df.ipynb  numpy.ipynb  pandas.ipynb  transactions_chart.ipynb
backend/scripts/: format-imports.sh  prestart.sh  update_totals.sh
(+105 files in other folders)
