[project]
authors = [
    {name = "Admin", email = "admin@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "uvicorn<1.0.0,>=0.18.3",
    "fastapi<1.0.0,>=0.82.0",
    "python-multipart<1.0.0,>=0.0.20",
    "email-validator<2.0.0,>=1.2.1",
    "requests<3.0.0,>=2.28.1",
    "celery<6.0.0,>=5.2.7",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.0.1",
    "pydantic<2.0.0,>=1.10.2",
    "emails<1.0,>=0.6",
    "raven<7.0.0,>=6.10.0",
    "gunicorn>=20.1.0,<21.0.0",
    "jinja2<4.0.0,>=3.1.2",
    "psycopg2-binary<3.0.0,>=2.9.3",
    "alembic<2.0.0,>=1.8.1",
    "sqlalchemy<2.0.0,>=1.4.40",
    "pytest<8.0.0,>=7.1.3",
    "python-jose[cryptography]<4.0.0,>=3.3.0",
    "sentry-sdk<2.0.0,>=1.12.1",
    "asyncpg<1.0.0,>=0.27.0",
    "pytest-asyncio<1.0.0,>=0.20.3",
    "httpx<1.0.0,>=0.23.1",
    "faker<20.0.0,>=19.3.1",
    "pandas>=2.1.0,<3.0.0",
    "fuzzywuzzy>=0.18.0,<1.0.0",
    "openai>=1.64.0",
    "filetype>=1.2.0",
]
name = "app"
version = "0.1.0"
description = ""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.uv]
dev-dependencies = [
    "mypy<1.0,>=0.971",
    "black<23.0.0,>=22.8.0",
    "isort<6.0.0,>=5.10.1",
    "autoflake<2.0.0,>=1.5.3",
    "flake8<6.0.0,>=5.0.4",
    "pytest<8.0.0,>=7.1.3",
    "sqlalchemy2-stubs<1.0.0,>=0.0.2a27",
    "pytest-cov<4.0.0,>=3.0.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
